Remove filterpy dependency to make facexlib more friendly to Windows users

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ line_length = 120
 multi_line_output = 0
 known_standard_library = pkg_resources,setuptools
 known_first_party = facexlib
-known_third_party = PIL,cv2,filterpy,numba,numpy,scipy,torch,torchvision,tqdm
+known_third_party = PIL,cv2,numba,numpy,scipy,torch,torchvision,tqdm
 no_lines_before = STDLIB,LOCALFOLDER
 default_section = THIRDPARTY
 
